--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="typed-text d-none">Web Developer, Front End Developer, Back End Developer,Software Developer,Data Analyst</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="css/SakkthiVA(Resume).pdf" target="_blank" class="btn btn-primary py-3 px-4 me-5" download>View CV</a>
-                        <a class="btn btn-primary py-3 px-5" href="tel:+91 98427 28175">Contact Us</a>
+                        <a class="btn btn-primary py-3 px-5" href="tel:+91 98427 28175">Contact Me</a>
                         <!-- <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
