--- a/index.html
+++ b/index.html
@@ -41,6 +41,36 @@
     </div>
     <!-- Spinner End -->
 
+
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light fixed-top shadow py-lg-0 px-4 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+        <a href="index.html" class="navbar-brand d-block d-lg-none">
+            <h1 class="text-primary fw-bold m-0">Sakkthi V A</h1>
+        </a>
+        <!-- <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button> -->
+        <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
+            <div class="navbar-nav ms-auto py-0">
+                <!-- <a href="#home" class="nav-item nav-link active">Home</a> -->
+                <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                <!-- <a href="#skill" class="nav-item nav-link">Skills</a> -->
+                <!-- <a href="#service" class="nav-item nav-link">Services</a> -->
+            </div>
+            <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
+                <h1 class="text-primary fw-bold m-0">Sakkthi V A</h1>
+            </a>
+            <div class="navbar-nav me-auto py-0">
+                <!-- <a href="#project" class="nav-item nav-link">Projects</a> -->
+                <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
+                <!-- <a href="#testimonial" class="nav-item nav-link">Testimonial</a> -->
+                <!-- <a href="#contact" class="nav-item nav-link">Contact</a> -->
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+
     <!-- Header Start -->
     <div class="container-fluid bg-light my-6 mt-0" id="home">
         <div class="container">
@@ -52,7 +82,7 @@
                     <div class="typed-text d-none">Web Developer, Front End Developer, Back End Developer,Software Developer,Data Analyst</div>
                     <div class="d-flex align-items-center pt-5">
                         <a href="css/SakkthiVA(Resume).pdf" target="_blank" class="btn btn-primary py-3 px-4 me-5" download>View CV</a>
-                        <a class="btn btn-primary py-3 px-5" href="tel:+91 98427 28175">Contact Me</a>
+                        <a class="btn btn-primary py-3 px-5" href="tel:+91 98427 28175">Contact Us</a>
                         <!-- <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
@@ -96,6 +126,12 @@
                                 Additionally, I collaborate with teams to understand their data needs and provide actionable insights to support data-driven decision-making.<br>
                             </li>
                         </ul>
+                        As a Junior Full Stack Developer, my responsibilities include front-end and back-end development, with a focus on creating seamless user interfaces and robust server-side functionalities.<br>
+                        I manage database systems to ensure efficient data storage and retrieval, and utilize version control to maintain code integrity and collaboration.<br>
+                        My role encompasses a comprehensive approach to both client-side and server-side development, contributing to well-rounded software solutions.<br>
+                        With this I am skilled in data collection and cleaning, gathering and preparing data from diverse sources to ensure its accuracy and completeness.<br>
+                        I apply statistical techniques and tools to analyze data, uncovering trends, patterns, and insights. I create and present reports, dashboards, and visualizations to effectively communicate findings to stakeholders.<br>
+                        Additionally, I collaborate with teams to understand their data needs and provide actionable insights to support data-driven decision-making.<br>
                     </p>
                     <h3 class="mb-4">My Skills</h3>
                     <div class="row align-items-center">
@@ -103,59 +139,59 @@
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">HTML</h6>
-                                    <h6 class="font-weight-bold">95%</h6>
+                                    <h6 class="font-weight-bold">80%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">CSS</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">70%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">Javascript</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">75%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
                                 </div>
                                 
                             </div>
-                            <!-- <div class="skill mb-4">
+                            <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">PHP</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">MySQL & PostgreSql</h6>
+                                    <h6 class="font-weight-bold">75%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="col-md-6">
                             
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">Python</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">70%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="font-weight-bold">Django</h6>
-                                    <h6 class="font-weight-bold">95%</h6>
+                                    <h6 class="font-weight-bold">80%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-dark" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
@@ -164,7 +200,7 @@
                                     <h6 class="font-weight-bold">70%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar bg-secondary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
