--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Javascript</h6>
+                                    <h6 class="font-weight-bold">Javascript & jQuery</h6>
                                     <h6 class="font-weight-bold">75%</h6>
                                 </div>
                                 <div class="progress">
