--- a/index.html
+++ b/index.html
@@ -231,29 +231,29 @@
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
                                 <div class="col-sm-6">
-                                    <h5>Data Analyst</h5>
+                                    <h5>Junior Data Analyst</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">Feb 2023 - Sep 2023</p>
                                     <h6 class="mb-0">Skill Lync</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Software Developer</h5>
+                                    <h5>Junior Full Stack Developer</h5>
                                     <hr class="text-primary my-2">
                                     <p class="text-primary mb-1">Oct 2023 - Jan 2025</p>
                                     <h6 class="mb-0">STP Web Hosting</h6>
                                 </div>
-                                <!-- <div class="col-sm-6">
-                                    <h5>Web Designer</h5>
+                                <div class="col-sm-6">
+                                    <h5>Junior Full Stack Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">Feb 2025 - Apr 2025</p>
+                                    <h6 class="mb-0">4x Engineer</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Apps Designer</h5>
+                                    <h5>Senior Full Stack Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
-                                </div> -->
+                                    <p class="text-primary mb-1">Apr 2025 - Present</p>
+                                    <h6 class="mb-0">JVL Technologies</h6>
+                                </div>
                             </div>
                         </div>
                         <div id="tab-2" class="tab-pane fade show p-0">
