--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   </main>
 
   <footer>
-    <div class="container">© 2025 Sakkthi V A — Built with care • Designed for impact</div>
+    <div class="container">© 2025 Sakkthi V A — Built with care • Designed for Sakkthi</div>
   </footer>
 
   <script>
@@ -300,3 +300,4 @@
   </script>
 </body>
 </html>
+
