--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
 
         <div style="margin-top:12px;display:flex;gap:8px;flex-wrap:wrap">
-          <a class="btn btn-primary" href="/SakkthiVA(Resume).pdf" download>Download Resume</a>
+          <a class="btn btn-primary" href="css/SakkthiVA(Resume).pdf" download>Download Resume</a>
           <a class="btn btn-ghost" href="https://skill-lync.com/student-projects/project-1-covid-19-vaccinations-trend-analysis-344" target="_blank">View Project</a>
         </div>
 
@@ -300,4 +300,5 @@
   </script>
 </body>
 </html>
+
 
