Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
           <h4>Skill Lync — Junior Data Analyst (Feb 2023 – Sep 2023)</h4>
           <p>Data cleaning, analytics, dashboard building, and reporting using Python, SQL, Power BI, and Tableau.</p>
         </div>
+        <div class="exp">
+          <h4>JVL Technologies — Full Stack Developer & Support (Freelancer) (Jan 2022 – Jul 2023)</h4>
+          <p>Developed FastAPI backends, implemented JWT authentication, built dashboards, and contributed to scalable database architecture.</p>
+        </div>
+
       </div>
     </section>
 
@@ -300,5 +305,6 @@
   </script>
 </body>
 </html>
+
 
 
