Refactor index.html for improved structure and content

--- a/index.html
+++ b/index.html
@@ -267,6 +267,11 @@
           <p>Developed FastAPI backends, implemented JWT authentication, built dashboards, and contributed to scalable database architecture.</p>
         </div>
 
+         <div class="exp">
+          <h4>Techno — Junior Python Developer (May 2021 – Oct 2021)</h4>
+          <p>basic scripting, debugging, and problem-solving, eager to grow through hands-on development and teamwork.</p>
+        </div>
+
       </div>
     </section>
 
@@ -305,6 +310,5 @@
   </script>
 </body>
 </html>
-
 
 
